--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,7 @@ body{
   height: 100vh;
   width: 100vw;
   transition: opacity 0.3s ease;
+  color: black
 }
 
 .show {
@@ -192,10 +193,12 @@ body{
   border-radius: 5px;
   box-shadow: 0 2px 4px #090c31(0, 0, 0, 0.2);
   text-align: center;
+  
 }
 
 .modal h1 {
   margin: 0;
+  color: white;
 }
 
 .modal p {
@@ -223,3 +226,6 @@ body{
     margin-top: 5px;
   }
   
+  .contenedor {
+    width: 100%;
+  }
