--- a/css/main.css
+++ b/css/main.css
@@ -20,18 +20,7 @@ body{
     place-items: center; 
 }  
 
-.titulo
-{
-    grid-column: 1 / -1;
-    background-color: white;
-    padding: 1.5rem;
-    font-size: 2rem;
-    text-align: right;
-    border-radius: .5rem;
-    margin-bottom: 1rem;
-    font-family: monospace;
-    font-weight: 600;
-}
+
 .Calculadora{
     background-color: #15173c;
     color: white;
@@ -39,8 +28,14 @@ body{
     max-width: 30%;
     padding: 1.5rem;
     border-radius: 1rem;
-    grid-template-columns: repeat(3, 1fr);
-    gap: .5rem;    
+    grid-template-columns: repeat(
+      auto-fit, 
+      minmax(
+        150px,
+        1fr
+      )
+    );
+    gap: 7px;    
 }
 
 
