--- a/css/main.css
+++ b/css/main.css
@@ -13,29 +13,12 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 body{
+    background-image: url(FondoCalcu.jpg);
     min-height: 100vh;
-    background-color: #15173c;
+    background-color: #ffffff;
     display: grid;
     place-items: center; 
 }  
-
-
-.Calculadora{
-    background-color: #15173c;
-    color: white;
-    display: grid;
-    max-width: 30%;
-    padding: -1.5rem;
-    border-radius: 1rem;
-    grid-template-columns: repeat(
-      auto-fit, 
-      minmax(
-        150px,
-        1fr
-      )
-    );
-    gap: 7px;    
-}
 
 
 .numero-input
@@ -46,11 +29,13 @@ body{
     font-size: 2rem;
     text-align: left;
     border-radius: .5rem;
+    border: none;
     margin-bottom: 1rem;
     font-family: monospace;
     font-weight: 600;
-    color: black;
+    color: rgb(0, 0, 0);
     width: 80%;
+    display: flex;
     
 }
 
@@ -59,7 +44,7 @@ body{
 {
     grid-column: 1 / -1;
     background-color: white;
-    padding: 1.5rem;
+    padding: 0.5rem;
     font-size: 2rem;
     text-align: right;
     border-radius: .5rem;
@@ -75,7 +60,7 @@ body{
 {
     grid-column: 1 / -1;
     background-color: white;
-    padding: 1.5rem;
+    padding: 0.5rem;
     font-size: 2rem;
     text-align: right;
     border-radius: .5rem;
@@ -87,50 +72,133 @@ body{
 
 }
 
-#Limpiar{
+
+
+
+#Limpiar {
+  padding: 18px 27px;
+  font-size: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
   background-color: yellow;
   border: none;
-  border-radius: .5rem;
-  color: white;
-  padding: 15px 32px;
+  border-radius: 0.5rem;
+  
+  box-shadow: yellow;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+
+#Limpiar:hover {
+  background-color: #414204;
+  box-shadow:yellow;
+  color: #ffffff;
+  transform: translateY(-7px);
+}
+
+#Limpiar:active {
+  transform: translateY(-1px);
+}
+
+
+
+
+#Calcular {
+  border: none;
+  border-radius: 0.5rem;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 30px;
+  font-size: 10px;
   justify-content: center;
   align-items: center;
+  height: 50px;
+  box-shadow: 0 0.625em 1em 0 rgba(255, 0, 0, 0.35);
+  overflow: hidden;
+
+}
+
+#Calcular div {
+  transform: translateY(0px);
+  width: 100%;
+ }
+ 
+ #Calcular,
+ #Calcular div {
+  transition: 0.6s cubic-bezier(.16,1,.3,1);
+ }
+ #Calcular div span {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 50px;
+ }
+
+ #Calcular div:nth-child(1) {
+  background-color: #ff0000;
+ }
+
+ #Calcular div:nth-child(2) {
+  background-color: #27a1f1;
+ }
+
+ #Calcular:hover {
+ box-shadow:#ff0000;
+}
+
+#Calcular:hover div {
+ transform: translateY(-50px);
+}
+
+#Calcular p {
+ font-size: 17px;
+ font-weight: bold;
+ color: #000000;
+}
+
+#Calcular:active {
+ transform: scale(0.95);
 }
 
 
-#Calcular{
-    background-color: red;
-    border: none;
-    border-radius: .5rem;
-    color: white;
-    padding: 15px 30px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 30px;
-    justify-content: center;
-    align-items: center;
+
+
+#close {
+  border: none;
+  border-radius: 0.5rem;
+  padding: 15px 27px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 35px;
+  justify-content: center;
+  align-items: center;
+  background-color: #ff0000;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
 }
 
-#close{
-    background-color: red;
-    border: none;
-    border-radius: .5rem;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 30px;
+#close:hover {
+  background-color: #500404;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+#close:active {
+  transform: translateY(-1px);
 }
 
 .modal-container {
   display: flex;
-  background-color: #090c31;
+  background-color: #ffffff;
+  background-image: url(FondoCalcu.jpg);
   align-items: center;
   justify-content: center;
   position: fixed;
@@ -150,19 +218,20 @@ body{
 }
 
 .modal {
-  background-color: #090c31;
-  width: 600px;
+  background-image: url(FondoCalcu.jpg);
+  background-color: #ffffff;
+  width:450px;
   max-width: 100%;
   padding: 30px 50px;
   border-radius: 5px;
-  box-shadow: 0 2px 4px #090c31(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px #ffffff(0, 0, 0, 0.2);
   text-align: center;
   
 }
 
 .modal h1 {
   margin: 0;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .modal p {
