--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,8 @@ body{
     background-color: #ffffff;
     display: grid;
     place-items: center; 
+    
+    
 }  
 
 
@@ -72,100 +74,57 @@ body{
 
 }
 
-
-
-
 #Limpiar {
   padding: 18px 27px;
-  font-size: 10px;
-  text-transform: uppercase;
+  font-size: 18px;
   letter-spacing: 2.5px;
-  font-weight: 500;
+  font-weight: bold;
   color: #000;
   background-color: yellow;
   border: none;
   border-radius: 0.5rem;
-  
   box-shadow: yellow;
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
 }
-
-
 #Limpiar:hover {
   background-color: #414204;
   box-shadow:yellow;
   color: #ffffff;
   transform: translateY(-7px);
 }
-
 #Limpiar:active {
   transform: translateY(-1px);
 }
 
 
-
-
 #Calcular {
+  padding: 18px 27px;
+  font-size: 18px;
+  letter-spacing: 2.5px;
+  font-weight: bold;
+  color: black;
+  background-color: red;
   border: none;
   border-radius: 0.5rem;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 10px;
-  justify-content: center;
-  align-items: center;
-  height: 50px;
-  box-shadow: 0 0.625em 1em 0 rgba(255, 0, 0, 0.35);
-  overflow: hidden;
-
+  box-shadow: rgb(109, 6, 6);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
 }
 
-#Calcular div {
-  transform: translateY(0px);
-  width: 100%;
- }
- 
- #Calcular,
- #Calcular div {
-  transition: 0.6s cubic-bezier(.16,1,.3,1);
- }
- #Calcular div span {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 50px;
- }
 
- #Calcular div:nth-child(1) {
-  background-color: #ff0000;
- }
-
- #Calcular div:nth-child(2) {
-  background-color: #27a1f1;
- }
-
- #Calcular:hover {
- box-shadow:#ff0000;
-}
-
-#Calcular:hover div {
- transform: translateY(-50px);
-}
-
-#Calcular p {
- font-size: 17px;
- font-weight: bold;
- color: #000000;
+#Calcular:hover {
+  background-color:rgb(109, 6, 6);
+  box-shadow:red;
+  color: #ffffff;
+  transform: translateY(-7px);
 }
 
 #Calcular:active {
- transform: scale(0.95);
+  transform: translateY(-1px);
 }
-
-
-
 
 #close {
   border: none;
@@ -174,7 +133,8 @@ body{
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 35px;
+  font-size: 20px;
+  font-weight: bold;
   justify-content: center;
   align-items: center;
   background-color: #ff0000;
@@ -186,7 +146,7 @@ body{
 
 #close:hover {
   background-color: #500404;
-  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.4);
   color: #fff;
   transform: translateY(-7px);
 }
@@ -225,8 +185,7 @@ body{
   padding: 30px 50px;
   border-radius: 5px;
   box-shadow: 0 2px 4px #ffffff(0, 0, 0, 0.2);
-  text-align: center;
-  
+  text-align: center; 
 }
 
 .modal h1 {
