--- a/css/main.css
+++ b/css/main.css
@@ -12,39 +12,47 @@ input[type=number]::-webkit-outer-spin-button {
     font-family: sans-serif; /*Fuente de la letra*/
 }
 
+/*estructura responsive*/
 body{
     background-image: url(FondoCalcu.jpg);
+    background-color: #ffffff;    
     min-height: 100vh;
-    background-color: #ffffff;
+    position: relative;
     display: grid;
-    place-items: center; 
-    
-    
-}  
+    grid-template-columns: repeat(
+      auto fit,
+      minmax(
+        150px,
+        1fr
+      )
+    );
+  }  
 
+/*estructura recomendada para usar en modales*/
+.Calculadora{
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+}
 
 .numero-input
 {
-    grid-column: 1 / -1;
     background-color: white;
     padding: 0.5rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-align: left;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     border: none;
     margin-bottom: 1rem;
     font-family: monospace;
     font-weight: 600;
     color: rgb(0, 0, 0);
-    width: 80%;
-    display: flex;
     
 }
 
-
 .calif
 {
-    grid-column: 1 / -1;
     background-color: white;
     padding: 0.5rem;
     font-size: 2rem;
@@ -74,7 +82,24 @@ body{
 
 }
 
+
+.buttons{
+  justify-content: center;
+    position: relative;
+    display: grid;
+    
+    grid-template-columns: repeat(
+      auto fit,
+      minmax(
+        150px,
+        1fr
+      )
+    );
+}
+
 #Limpiar {
+  
+  position: absolute;  
   padding: 18px 27px;
   font-size: 18px;
   letter-spacing: 2.5px;
@@ -99,7 +124,10 @@ body{
 }
 
 
+
 #Calcular {
+  left: 50%;
+  position:absolute;
   padding: 18px 27px;
   font-size: 18px;
   letter-spacing: 2.5px;
@@ -156,9 +184,10 @@ body{
 }
 
 .modal-container {
-  display: flex;
+  
   background-color: #ffffff;
   background-image: url(FondoCalcu.jpg);
+  display: flex;
   align-items: center;
   justify-content: center;
   position: fixed;
