Correccion color boton cerrar

--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,7 @@ body{
   font-weight: bold;
   justify-content: center;
   align-items: center;
+  color: black;
   background-color: #ff0000;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
